max-width property is does not overriding the width properties for css tables(display:table) https://bugs.webkit.org/show_bug.cgi?id=98455

Patch by Pravin D <pravind.2k4@gmail.com> on 2012-10-09
Reviewed by Tony Chang.

Source/WebCore:

The max-width property determines the maximum computed width an element can have. In case of css tables(display:table),
the computed was not being limited by the max-width property. The current patch fixes this issue.

Test: fast/table/css-table-max-width.html

* rendering/RenderTable.cpp:
(WebCore::RenderTable::updateLogicalWidth):
 Logic to compute the logical width of an element such that it does not exceed the max-width value.
 Also when both min-width and max-width are present, the following contraint is used to compute the logical width:
   1) min-width < Computed LogicalWidth < max-width, when min-width < max-width.
   2) Computed LogicalWidth = min-width, when min-width > max-width.

LayoutTests:

* fast/table/css-table-max-width-expected.txt: Added.
* fast/table/css-table-max-width.html: Added.

Canonical link: https://commits.webkit.org/116758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130774 268f45cc-cd09-0410-ab3c-d52691b4dbfc